<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun_baru"
        android:gravity="center"
        style="@style/title"
        />

    <ImageView
        android:id="@+id/iv_data_bayi"
        android:layout_width="300dp"
        android:layout_height="138dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/baby"
        android:contentDescription="@string/image_baby" />

    <LinearLayout
        android:id="@+id/ll_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edt_username_regis"
            style="@style/editTextName"
            android:layout_width="224dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:autofillHints="username"
            android:background="@drawable/button_shape"
            android:hint="@string/username"
            android:inputType="textCapWords"
            android:padding="15dp" />

        <EditText
            android:id="@+id/edt_email_regis"
            android:layout_width="224dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:hint="@string/email"
            android:background="@drawable/button_shape"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            style="@style/editTextName"
            />

        <EditText
            android:id="@+id/edt_password_regis"
            android:layout_width="224dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:background="@drawable/button_shape"
            android:autofillHints="password"
            android:inputType="textPassword"
            style="@style/editTextName"
            />

        <EditText
            android:id="@+id/edt_confirm_regis"
            android:layout_width="224dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:hint="@string/konfirmasi_password"
            android:background="@drawable/button_shape"
            android:autofillHints="password"
            android:inputType="textPassword"
            style="@style/editTextName"
            />



        <Button
            android:id="@+id/btn_regis"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/buat_akun"
            android:textColor="@color/primaryColor"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>
</LinearLayout>
