<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/buah_pepaya"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="340dp"
            android:layout_height="300dp"
            android:src="@drawable/pepaya"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:background="@color/secondaryColor"
            android:text="@string/desc_pepaya"
            android:textSize="11sp"
            android:padding="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_resep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resep"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bahan"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_detail_bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:text="@string/bahan_pepaya"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_cara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cara"
            android:textSize="11sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_detail_cara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cara_pepaya"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</ScrollView>
