<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailResepActivity"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >

       <TextView
           android:id="@+id/tv_makananutama"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:textSize="20sp"
           android:text="@string/makanan_utama"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="20dp"
           android:textStyle="bold"/>

       <ImageView
           android:id="@+id/iv_nasi_merah"
           android:layout_width="340dp"
           android:layout_height="300dp"
           android:src="@drawable/nasi_merah"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="30dp"/>

       <TextView
           android:id="@+id/tv_resep"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/resep"
           android:textColor="@color/white"
           android:textStyle="bold"
           android:layout_gravity="start"
           android:layout_marginStart="30dp"
           android:layout_marginTop="30dp"/>

       <TextView
           android:id="@+id/tv_bahan"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/bahan"
           android:textSize="11sp"
           android:textColor="@color/white"
           android:layout_marginStart="30dp"
           android:textStyle="bold"/>

       <TextView
           android:id="@+id/tv_detail_bahan"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginTop="5dp"
           android:text="@string/makanan_utama"
           android:textColor="@color/white"
           android:textSize="11sp"
           />

       <TextView
           android:id="@+id/tv_cara"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/cara"
           android:textSize="10sp"
           android:layout_marginStart="30dp"
           android:layout_marginTop="10dp"
           android:textColor="@color/white"
           android:textStyle="bold"/>

       <TextView
           android:id="@+id/tv_detail_cara"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/detail_cara"
           android:textSize="10sp"
           android:textColor="@color/white"
           android:layout_marginStart="30dp"
           android:layout_marginTop="5dp"/>

   </LinearLayout>

</ScrollView>
