<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">


    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="start"/>
    
    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/profilee"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:layout_marginStart="30dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:autofillHints="emailAddress"
        android:textColorHint="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

    <Button
        android:id="@+id/btn_simpaneditprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="50dp"
        style="@style/buttonText"
        />

    </LinearLayout>


</LinearLayout>