<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.Menu1324Activity">

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_menu_13_24"
        style="@style/menuTitle"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/menu_13_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_arrow_back"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_13_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <Button
            android:id="@+id/btn_makananpokok"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:text="@string/makanan_pokok"
            style="@style/menuBUtton"
            />

        <Button
            android:id="@+id/btn_hewani"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/primaryColor"
            android:text="@string/lauk_hewani"
            style="@style/menuBUtton"
            />

        <Button
            android:id="@+id/btn_nabati"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/primaryColor"
            android:text="@string/lauk_nabati"
            style="@style/menuBUtton"
            />

        <Button
            android:id="@+id/btn_hidangan"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/primaryColor"
            android:text="@string/hidagangan_sayur"
            style="@style/menuBUtton"
            />

<!--        <Button-->
<!--            android:id="@+id/btn_selingan"-->
<!--            android:layout_width="270dp"-->
<!--            android:layout_height="65dp"-->
<!--            android:backgroundTint="@color/yellow"-->
<!--            android:textColor="@color/primaryColor"-->
<!--            android:text="@string/selingan"-->
<!--            style="@style/menuBUtton"-->
<!--            />-->

        <Button
            android:id="@+id/btn_buah"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/primaryColor"
            android:text="@string/buah"
            android:layout_marginTop="20dp"
            style="@style/menuBUtton"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>